[project]
name = "ray-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "boto3>=1.42.62",
    "gymnasium[atari]>=1.2.3",
    "jupyter>=1.1.1",
    "pandas<3",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "ray[data,serve]>=2.54.0",
    "starlette>=0.52.1",
    "uvloop<0.22",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "outlines>=1.2.12",
]
